added list-conf & enable-conf features
